--- a/trunk/configs/boards/JCG-AC860M/kernel-3.4.x-5.0.config
+++ b/trunk/configs/boards/JCG-AC860M/kernel-3.4.x-5.0.config
@@ -1858,7 +1858,7 @@ CONFIG_GE1_RGMII_FORCE_1000=y
 # CONFIG_GE1_TRGMII_FORCE_1200 is not set
 # CONFIG_GE1_RGMII_AN is not set
 # CONFIG_GE1_RGMII_NONE is not set
-CONFIG_RAETH_GMAC2=y
+# CONFIG_RAETH_GMAC2 is not set
 # CONFIG_GE2_MII_FORCE_100 is not set
 # CONFIG_GE2_MII_AN is not set
 # CONFIG_GE2_RVMII_FORCE_100 is not set
